--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       margin-top: 70px;
       font-size: 18px;
     }
+    .small span {
+      text-transform: uppercase;
+    }
   </style>
 </head>
 <body>
