--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Github Shutdown</title>
   <style>
+    html {
+      font-size: 625%;
+    }
+    @media screen and (max-width: 768px) {
+      html {
+        font-size: 100%;
+      }
+    }
     html, body {
       min-height: 100%;
       height: 100%;
@@ -13,19 +21,19 @@
       color: white;
     }
     body {
-      padding-top: 100px;
-      padding-left: 280px;
-      padding-right: 280px;
+      padding-top: 1rem;
+      padding-left: 2.8rem;
+      padding-right: 2.8rem;
     }
     #smile {
-      font-size: 145px;
+      font-size: 1.45rem;
     }
     .mes {
-      font-size: 30px;
+      font-size: .3rem;
     }
     .small {
-      margin-top: 70px;
-      font-size: 18px;
+      margin-top: .7rem;
+      font-size: .18rem;
     }
     .small span {
       text-transform: uppercase;
