--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
       }
     }
     html, body {
+      margin: 0;
       min-height: 100%;
       height: 100%;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
       background-color: #1271ab;
       color: white;
     }
